# SmokeSimulation

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  SMOKE_debug  basic_math.cpp  basic_math.h  camera.cpp  camera.h  clock.h  constants.cpp  constants.h  custom_output.h  fps.cpp  fps.h  grid_data.cpp  grid_data.h  grid_data_matrix.h  mac_grid.cpp  mac_grid.h  main.cpp  matrix.h  open_gl_headers.h  smoke_sim.cpp  smoke_sim.h  stb_image.c  stb_image_write.h  timer.h  vec.h
